# Card_Game_Briscola

./: README.md
Briscola Installer/: READMe.html
Briscola_Setup/: README.md
source game/: Buttonn.qml  CMakeLists.txt  deck.cpp  deck.h  gamecontroler.cpp  gamecontroler.h  hand.cpp  hand.h  main.cpp  main.qml  player.cpp  player.h  qml.qrc  score.cpp  score.h
